# search-gpt

./: .gitignore  LICENSE  README.md  package-lock.json  package.json
.github/workflows/: pylint.yml
app/: page.tsx
app/api/chat/: route.ts
backend/: .gitignore  alembic.ini  example.appsettings.toml  example.env  pyproject.toml  requirements.txt  sample.config.toml
backend/alembic/: env.py  script.py.mako
backend/alembic/versions/: 0f76756a1bf3_initial_tables.py  8396dc4cfe33_create_users_table.py
backend/app/: main.py
backend/app/api/: deps.py
backend/app/api/v1/: router.py
backend/app/api/v1/endpoints/: auth.py  auth_endpoint.py  benchmark.py  benchmark_endpoint.py  chat.py  chat_endpoint.py  thread.py  thread_endpoint.py  user.py
backend/app/config/: appsettings.py  gemini_settings.py  logging_config.py  settings.py
backend/app/core/: exceptions.py  security.py
backend/app/crud/: chat_crud.py  message_crud.py  thread_crud.py  user_crud.py
backend/app/database/: session.py
backend/app/models/: __init__.py  base_uuid_model.py  chat_model.py  message_model.py  thread_model.py  user_model.py
backend/app/schemas/: auth_schemas.py  chat_schema.py  message_schema.py  thread_schema.py  user_schema.py
backend/app/schemas/user/: create_user_schema.py
backend/app/services/: auth_service.py  gemini_service.py  search_service.py
backend/app/utils/: auth_utils.py  datetime_utils.py  gemini_formatters.py  map_schema.py  security.py  uuid6.py  uuid_utils.py
backend/docker/: docker-compose.yml
backend/docker/searxng-docker/: Caddyfile  docker-compose.yaml
backend/docker/searxng-docker/searxng/: settings.yml
backend/docs/: README.MD
backend/logs/: app.log.2025-04-23  app.log.2025-04-26
backend/migrations/: env.py  script.py.mako
backend/migrations/versions/: 098bde3044d4_initial.py  1b8f7744ee25_change_user_model.py  4b867b3e8fab_initial_migration.py  4c7a32cae76a_add_role_and_metadata_to_messagemodel.py  900c0c508404_initial.py  9496e0b86813_initial_models.py  95ce4ea5328d_initial.py  b34eecb80f21_add_message_id_to_messagemodel.py  c3d41ff1dcd7_initial.py  e2a12075618a_initial.py
frontend/: .prettierrc  eslint.config.mjs  example.env  package-lock.json  package.json  tailwind.config.ts
frontend/app/: layout.tsx
frontend/app/(auth)/login/: page.tsx
frontend/app/(auth)/register/: page.tsx
frontend/app/api/chat/: route.ts
frontend/app/chat/: layout.tsx  page.tsx
frontend/lib/: custom-runtime.tsx
frontend/src/: middleware.ts
frontend/src/app/: layout.tsx  page.tsx
frontend/src/app/(auth)/login/: page.tsx
frontend/src/app/(auth)/register/: page.tsx
frontend/src/app/api/chat/: route.ts
frontend/src/app/chat/: layout.tsx  page.tsx
frontend/src/app/dashboard/: page.tsx
frontend/src/app/thread/: page.tsx
frontend/src/app/threads/[id]/: page.tsx
frontend/src/components/: app-sidebar.tsx  assistant-sidebar.tsx  markdown-text.tsx  nav-main.tsx  nav-projects.tsx  nav-user.tsx  team-switcher.tsx  theme-switcher.tsx  thread.tsx  tooltip-icon-button.tsx
frontend/src/components/aichat-ui/: chat.tsx  code-block.tsx  empty-chat.tsx  message-box.tsx  message-input.tsx  thread-header.tsx  thread-root.tsx  thread-window.tsx
frontend/src/components/aichat-ui/context/: api-service.ts  chat-reducer.ts  hooks.ts  index.ts  streaming-service.ts  thread-context.tsx  types.ts
frontend/src/components/aichat-ui/message-input/: attach-button.tsx  drag-drop-overlay.tsx  file-item.tsx  file-list.tsx  index.tsx  message-textarea.tsx  (+1 more)
frontend/src/components/assistant-ui/: thread-list.tsx  thread.tsx  tooltip-icon-button.tsx
frontend/src/components/ui/: alert.tsx  breadcrumb.tsx  button.tsx  dropdown-menu.tsx  form.tsx  label.tsx  resizable.tsx  scroll-area.tsx  sheet.tsx  sidebar.tsx  tooltip.tsx
frontend/src/config/: app-config.ts
frontend/src/lib/: custom-runtime.tsx
frontend/src/lib/api/: auth.ts  client.ts  types.ts
frontend/src/lib/auth/: index.ts
frontend/src/lib/axios/: client.ts  server.ts
frontend/src/providers/: auth-provider.tsx
frontend/src/schemas/: chat-schema.ts
frontend/src/styles/: globals.css
frontend/src/types/: next-auth.d.ts
search-gpt/: package-lock.json  package.json
search-gpt/app/api/chat/: route.ts
search-service/app/: main.py
search-service/app/api/v1/: search.py
search-service/app/services/: search_service.py
(+6 files in other folders)
